fix footer overflow

--- a/client/scss/components/_footer.scss
+++ b/client/scss/components/_footer.scss
@@ -4,7 +4,8 @@
   background-color: $color4;
   color: white;
   padding: 0.5em 5vw;
-  height: 172px;
+  min-height: 172px;
+  overflow: auto;
 
   ul {
     list-style: none;
